--- a/birds/index.html
+++ b/birds/index.html
@@ -513,6 +513,11 @@
         </section>
     </div>
 
+    <footer>
+        <p>Suggest a bird: <a href="mailto:birds@cowneck.com"
+                style="color: var(--accent-warm); text-decoration: none; font-weight: bold;">birds@cowneck.com</a></p>
+    </footer>
+
     <!-- Image Modal -->
     <div id="imageModal" class="modal" role="dialog" aria-modal="true" aria-label="Image View">
         <button class="modal-close" aria-label="Close modal">&times;</button>
