style: update 'Bold & Colorful' category title color

--- a/birds/index.html
+++ b/birds/index.html
@@ -386,7 +386,7 @@
 
         <!-- GROUP 3: Bold & Colorful -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Uncommon" data-color="#77dd77">Bold & Colorful</h2>
+            <h2 class="category-title" data-loot="Uncommon" data-color="#A2E4BF">Bold & Colorful</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/cardinal.jpg" alt="Northern Cardinal" loading="lazy">
