--- a/games/index.html
+++ b/games/index.html
@@ -198,8 +198,16 @@
 
             <div class="game-card">
                 <h2>⛷️ Slope Builder</h2>
-                <p>Create your own ski course in BUILD mode, then RIDE it! Use arrows or gyro controls to shape the slopes and boost uphill for thrilling descents.</p>
+                <p>Create your own ski course in BUILD mode, then RIDE it! Use arrows or gyro controls to shape the
+                    slopes and boost uphill for thrilling descents.</p>
                 <a href="slope-builder.html" class="btn">PLAY NOW</a>
+            </div>
+
+            <div class="game-card">
+                <h2>🦅 High Flyers</h2>
+                <p>Fly through diverse biomes, upgrade your bird, collect loot boxes, and unlock achievements in this 3D
+                    endless flyer.</p>
+                <a href="high-flyers.html" class="btn">PLAY NOW</a>
             </div>
 
         </div>
