feat: add Song Sparrow bird entry and images.

--- a/birds/index.html
+++ b/birds/index.html
@@ -482,6 +482,16 @@
                         <p class="bird-diet"><strong>♥ Loves:</strong> Millet, cracked corn</p>
                     </div>
                 </article>
+                <article class="card">
+                    <img src="optimized_images/song-sparrow.jpg" alt="Song Sparrow" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Song Sparrow</h3>
+                        <p class="scientific-name">Melospiza melodia</p>
+                        <p class="bird-desc">The solitary singer. Often skulking in low brush, identified by heavy
+                            breast streaks and a central spot.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Seeds, insects, fruit</p>
+                    </div>
+                </article>
             </div>
         </section>
 
