feat: add Waterfowl category with four new bird entries and renumber subsequent categories

--- a/birds/index.html
+++ b/birds/index.html
@@ -495,7 +495,52 @@
             </div>
         </section>
 
-        <!-- GROUP 6: Pests -->
+        <!-- GROUP 6: Waterfowl -->
+        <section class="category-section">
+            <h2 class="category-title" data-loot="Rare" data-color="#0077be">Waterfowl</h2>
+            <div class="card-grid">
+                <article class="card">
+                    <img src="optimized_images/mallard.jpg" alt="Mallard" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Mallard</h3>
+                        <p class="scientific-name">Anas platyrhynchos</p>
+                        <p class="bird-desc">The standard duck. Males have an iconic emerald green head and yellow bill.
+                        </p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Aquatic plants, seeds, insects</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/canada-goose.jpg" alt="Canada Goose" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Canada Goose</h3>
+                        <p class="scientific-name">Branta canadensis</p>
+                        <p class="bird-desc">The honker. Famous for their V-formation flights and protecting their
+                            goslings.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Grass, grains, aquatic plants</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/mute-swan.jpg" alt="Mute Swan" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Mute Swan</h3>
+                        <p class="scientific-name">Cygnus olor</p>
+                        <p class="bird-desc">The elegant giant. Recognized by their curved S-neck and orange bill.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Aquatic vegetation, grazing</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/great-egret.jpg" alt="Great Egret" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Great Egret</h3>
+                        <p class="scientific-name">Ardea alba</p>
+                        <p class="bird-desc">The fisher. A tall, all-white heron with a yellow bill and black legs.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Fish, frogs, insects</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- GROUP 7: Pests -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Cursed" data-color="#ff6961">Pests</h2>
             <div class="card-grid">
