feat: add new 'Apex' bird group and standardize bird group comments.

--- a/birds/index.html
+++ b/birds/index.html
@@ -320,7 +320,7 @@
             <p class="subtitle">A curated guide to our local avian visitors</p>
         </header>
 
-        <!-- GROUP 1: Woodpecker Duo -->
+        <!-- GROUP: Woodpecker Duo -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Legendary" data-color="#ffb347">Woodpecker Duo</h2>
             <div class="card-grid">
@@ -347,7 +347,8 @@
             </div>
         </section>
 
-        <!-- GROUP 2: The Winter Guild -->
+
+        <!-- GROUP: The Winter Guild -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Epic" data-color="#b39eb5">Winter Guild</h2>
             <div class="card-grid">
@@ -384,7 +385,7 @@
             </div>
         </section>
 
-        <!-- GROUP 3: Bold & Colorful -->
+        <!-- GROUP: Bold & Colorful -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Uncommon" data-color="#A2E4BF">Bold & Colorful</h2>
             <div class="card-grid">
@@ -421,7 +422,7 @@
             </div>
         </section>
 
-        <!-- GROUP 4: Ground Crew -->
+        <!-- GROUP: Ground Crew -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Rare" data-color="#aec6cf">Ground Crew</h2>
             <div class="card-grid">
@@ -448,7 +449,7 @@
             </div>
         </section>
 
-        <!-- GROUP 5: Boring Birds -->
+        <!-- GROUP: Boring Birds -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Common" data-color="#cfcfc4">Boring Birds</h2>
             <div class="card-grid">
@@ -495,7 +496,7 @@
             </div>
         </section>
 
-        <!-- GROUP 6: Waterfowl -->
+        <!-- GROUP: Waterfowl -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Rare" data-color="#0077be">Waterfowl</h2>
             <div class="card-grid">
@@ -540,7 +541,33 @@
             </div>
         </section>
 
-        <!-- GROUP 7: Pests -->
+        <!-- GROUP: Apex -->
+        <section class="category-section">
+            <h2 class="category-title" data-loot="Mythic" data-color="#E0115F">Apex</h2>
+            <div class="card-grid">
+                <article class="card">
+                    <img src="optimized_images/hummingbird.jpg" alt="Ruby-throated Hummingbird" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Ruby-throated Hummingbird</h3>
+                        <p class="scientific-name">Archilochus colubris</p>
+                        <p class="bird-desc">The tiny jewel. Only bird capable of hovering and flying backward.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Nectar, small insects</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/red-tailed-hawk.jpg" alt="Red-tailed Hawk" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Red-tailed Hawk</h3>
+                        <p class="scientific-name">Buteo jamaicensis</p>
+                        <p class="bird-desc">The master soarer. Known for their raspy scream that is used in movies for
+                            all eagles.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Small mammals, birds</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- GROUP: Pests -->
         <section class="category-section">
             <h2 class="category-title" data-loot="Cursed" data-color="#ff6961">Pests</h2>
             <div class="card-grid">
