feat: Add Red-winged Blackbird, White-throated Sparrow, and Osprey cards, and rename and reorganize the 'Sparrows' category.

--- a/birds/index.html
+++ b/birds/index.html
@@ -419,6 +419,16 @@
                         <p class="bird-diet"><strong>♥ Loves:</strong> Mealworms, fruit, berries</p>
                     </div>
                 </article>
+                <article class="card">
+                    <img src="optimized_images/red-winged-blackbird.jpg" alt="Red-winged Blackbird" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Red-winged Blackbird</h3>
+                        <p class="scientific-name">Agelaius phoeniceus</p>
+                        <p class="bird-desc">A wetland sentinel. The male's black body and red/yellow shoulder patches
+                            (epaulets) are unmistakable.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Insects, seeds, grains</p>
+                    </div>
+                </article>
             </div>
         </section>
 
@@ -449,9 +459,9 @@
             </div>
         </section>
 
-        <!-- GROUP: Boring Birds -->
+        <!-- GROUP: Sparrows -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Common" data-color="#cfcfc4">Boring Birds</h2>
+            <h2 class="category-title" data-loot="Common" data-color="#D2B48C">Sparrows</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/house-sparrow.jpg" alt="House Sparrow" loading="lazy">
@@ -463,6 +473,34 @@
                         <p class="bird-diet"><strong>♥ Loves:</strong> Grains, seeds, scraps</p>
                     </div>
                 </article>
+                <article class="card">
+                    <img src="optimized_images/song-sparrow.jpg" alt="Song Sparrow" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Song Sparrow</h3>
+                        <p class="scientific-name">Melospiza melodia</p>
+                        <p class="bird-desc">The solitary singer. Often skulking in low brush, identified by heavy
+                            breast streaks and a central spot.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Seeds, insects, fruit</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/white-throated-sparrow.jpg" alt="White-throated Sparrow" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">White-throated Sparrow</h3>
+                        <p class="scientific-name">Zonotrichia albicollis</p>
+                        <p class="bird-desc">The whistler. Known for their "Old Sam Peabody Peabody" song and distinct
+                            white throat.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Millet, sunflower seeds, fruit</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- GROUP: Boring Birds -->
+        <section class="category-section">
+            <h2 class="category-title" data-loot="Common" data-color="#cfcfc4">Boring Birds</h2>
+            <div class="card-grid">
+
                 <article class="card">
                     <img src="optimized_images/house-finch.jpg" alt="House Finch" loading="lazy">
                     <div class="card-content">
@@ -484,13 +522,13 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/song-sparrow.jpg" alt="Song Sparrow" loading="lazy">
+                    <img src="optimized_images/rock-pigeon.jpg" alt="Rock Pigeon" loading="lazy">
                     <div class="card-content">
-                        <h3 class="bird-name">Song Sparrow</h3>
-                        <p class="scientific-name">Melospiza melodia</p>
-                        <p class="bird-desc">The solitary singer. Often skulking in low brush, identified by heavy
-                            breast streaks and a central spot.</p>
-                        <p class="bird-diet"><strong>♥ Loves:</strong> Seeds, insects, fruit</p>
+                        <h3 class="bird-name">Rock Pigeon</h3>
+                        <p class="scientific-name">Columba livia</p>
+                        <p class="bird-desc">The city dweller. Often seen in flocks, recognizable by their iridescent
+                            neck feathers and bobbing walk.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Seeds, grains, scraps</p>
                     </div>
                 </article>
             </div>
@@ -538,6 +576,16 @@
                         <p class="bird-diet"><strong>♥ Loves:</strong> Fish, frogs, insects</p>
                     </div>
                 </article>
+                <article class="card">
+                    <img src="optimized_images/herring-gull.jpg" alt="Herring Gull" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Herring Gull</h3>
+                        <p class="scientific-name">Larus argentatus</p>
+                        <p class="bird-desc">The coastal staple. A large gull with pink legs and a distinctive red spot
+                            on the lower bill.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Fish, crustaceans, scraps</p>
+                    </div>
+                </article>
             </div>
         </section>
 
@@ -562,6 +610,15 @@
                         <p class="bird-desc">The master soarer. Known for their raspy scream that is used in movies for
                             all eagles.</p>
                         <p class="bird-diet"><strong>♥ Loves:</strong> Small mammals, birds</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/osprey.jpg" alt="Osprey" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Osprey</h3>
+                        <p class="scientific-name">Pandion haliaetus</p>
+                        <p class="bird-desc">The fish hawk. Unique among raptors for diving feet-first into water.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Live fish (exclusively)</p>
                     </div>
                 </article>
             </div>
