feat: add new bird cards for Northern Flicker, American Goldfinch, Gray Catbird, Northern Mockingbird, and Great Blue Heron, introduce 'The Mimics' category, and rename 'Woodpecker Duo' to 'Woodpecker Trio'.

--- a/birds/index.html
+++ b/birds/index.html
@@ -320,9 +320,9 @@
             <p class="subtitle">A curated guide to our local avian visitors</p>
         </header>
 
-        <!-- GROUP: Woodpecker Duo -->
+        <!-- GROUP: Woodpeckers -->
         <section class="category-section">
-            <h2 class="category-title" data-loot="Legendary" data-color="#ffb347">Woodpecker Duo</h2>
+            <h2 class="category-title" data-loot="Legendary" data-color="#ffb347">Woodpeckers</h2>
             <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/downy.jpg" alt="Downy Woodpecker" loading="lazy">
@@ -342,6 +342,16 @@
                         <p class="bird-desc">Known for their distinct rolling <i>churr</i> call and bright red "mohawk"
                             (despite the name).</p>
                         <p class="bird-diet"><strong>♥ Loves:</strong> Suet, peanuts, oranges</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/flicker.jpg" alt="Northern Flicker" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Northern Flicker</h3>
+                        <p class="scientific-name">Colaptes auratus</p>
+                        <p class="bird-desc">The ground woodpecker. Often seen hopping on lawns eating ants. Note
+                            the yellow underwings in flight.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Ants, beetles, suet</p>
                     </div>
                 </article>
             </div>
@@ -429,6 +439,16 @@
                         <p class="bird-diet"><strong>♥ Loves:</strong> Insects, seeds, grains</p>
                     </div>
                 </article>
+                <article class="card">
+                    <img src="optimized_images/goldfinch.jpg" alt="American Goldfinch" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">American Goldfinch</h3>
+                        <p class="scientific-name">Spinus tristis</p>
+                        <p class="bird-desc">The wild canary. Males are brilliant lemon-yellow in summer. They love
+                            thistle feeders.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Nyjer (thistle), sunflower chips</p>
+                    </div>
+                </article>
             </div>
         </section>
 
@@ -454,6 +474,33 @@
                         <p class="bird-desc">The loudmouth. A tiny, round bird with an incredibly loud
                             "teakettle-teakettle" song.</p>
                         <p class="bird-diet"><strong>♥ Loves:</strong> Mealworms, suet, peanuts</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- GROUP: Mimics -->
+        <section class="category-section">
+            <h2 class="category-title" data-loot="Rare" data-color="#B0C4DE">Mimics</h2>
+            <div class="card-grid">
+                <article class="card">
+                    <img src="optimized_images/catbird.jpg" alt="Gray Catbird" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Gray Catbird</h3>
+                        <p class="scientific-name">Dumetella carolinensis</p>
+                        <p class="bird-desc">The mewing shrub-dweller. Their slate-gray body and rusty undertail are
+                            distinctive.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Fruit, jelly, insects</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/mockingbird.jpg" alt="Northern Mockingbird" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Northern Mockingbird</h3>
+                        <p class="scientific-name">Mimus polyglottos</p>
+                        <p class="bird-desc">The remix artist. They repeat other birds' songs 3-4 times in a row. Very
+                            territorial.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Insects, berries, guarding tomato plants</p>
                     </div>
                 </article>
             </div>
@@ -565,6 +612,16 @@
                         <p class="scientific-name">Cygnus olor</p>
                         <p class="bird-desc">The elegant giant. Recognized by their curved S-neck and orange bill.</p>
                         <p class="bird-diet"><strong>♥ Loves:</strong> Aquatic vegetation, grazing</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="optimized_images/great-blue-heron.jpg" alt="Great Blue Heron" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="bird-name">Great Blue Heron</h3>
+                        <p class="scientific-name">Ardea herodias</p>
+                        <p class="bird-desc">The wetland giant. Often freezes statue-like before striking fish with its
+                            dagger bill.</p>
+                        <p class="bird-diet"><strong>♥ Loves:</strong> Fish, frogs, patience</p>
                     </div>
                 </article>
                 <article class="card">
