feat: Add new 'Estuary' bird category section with Great Blue Heron card.

--- a/birds/index.html
+++ b/birds/index.html
@@ -614,6 +614,13 @@
                         <p class="bird-diet"><strong>♥ Loves:</strong> Aquatic vegetation, grazing</p>
                     </div>
                 </article>
+            </div>
+        </section>
+
+        <!-- GROUP: Estuary -->
+        <section class="category-section">
+            <h2 class="category-title" data-loot="Rare" data-color="#4682B4">Estuary</h2>
+            <div class="card-grid">
                 <article class="card">
                     <img src="optimized_images/great-blue-heron.jpg" alt="Great Blue Heron" loading="lazy">
                     <div class="card-content">
