feat: add Google Analytics tracking to all HTML pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>cowneck</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RNVL7JZVJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-6RNVL7JZVJ');
+    </script>
     <style>
         body {
             display: flex;
