--- a/games/high-flyers.html
+++ b/games/high-flyers.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Flyers 3D</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RNVL7JZVJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-6RNVL7JZVJ');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Babel allows us to write JSX in the browser -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
