--- a/birds/index.html
+++ b/birds/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="A curated, visual guide to the common and rare birds of Port Washington, NY. Discover local avian life with beautiful photography and dietary info.">
     <title>Birds of Port Washington</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RNVL7JZVJ"></script>
@@ -92,6 +94,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 30px;
+            justify-content: center;
         }
 
         /* Card Design */
@@ -104,7 +107,7 @@
             display: flex;
             flex-direction: column;
             border: 2px solid rgba(212, 165, 116, 0.2);
-            flex: 1 1 350px;
+            flex: 0 1 350px;
             max-width: 100%;
         }
 
@@ -117,7 +120,7 @@
 
         .card img {
             width: 100%;
-            height: 220px;
+            aspect-ratio: 1 / 1;
             object-fit: cover;
             background: linear-gradient(135deg, #e0e0e0 0%, #f0f0f0 100%);
             cursor: pointer;
